CSS: Fixes #22 Filter bar input focus ring is hidden because of hidden overflow

--- a/suit/static/suit/less/ui/list.less
+++ b/suit/static/suit/less/ui/list.less
@@ -39,5 +39,5 @@
 }
 
 .toolbar-content {
-    overflow: hidden;
+    clear: right;
 }
